# math

./: CMakeLists.txt  LICENSE  PLANNING.md  README.md
.github/: copilot-instructions.md
src/: main.c
